# fishr

./: .env.example  .gitignore  Cargo.toml  LEEME.md  LICENSE  README.md  ROADMAP.md  docker-compose.yml  tailwind.config.js
.cargo/: config.toml
.github/workflows/: ci.yml
crates/fishr-agent/: Cargo.toml
crates/fishr-agent/src/: lib.rs  main.rs  state.rs
crates/fishr-agent/src/api/: analytics.rs  auth.rs  customers.rs  error.rs  inventory.rs  mod.rs  planner.rs  pos.rs  pricing.rs  rate_limit.rs  reports.rs  router.rs  setup.rs  suppliers.rs  test.rs
crates/fishr-agent/src/db/: mod.rs  pool.rs
crates/fishr-agent/src/db/migrations/: 001_init.sql  002_seed.sql  003_supplier.sql  004_auth.sql  005_iva_discount.sql  006_fish_item_index.sql
crates/fishr-agent/src/frontend/: app.rs  index.html
crates/fishr-agent/src/frontend/components/: auth.rs  customer_form.rs  inventory.rs  layout.rs  mod.rs  pos.rs  reports.rs
crates/fishr-agent/src/frontend/pages/: customers.rs  dashboard.rs  inventory.rs  login.rs  mod.rs  pos.rs  reports.rs  settings.rs
crates/fishr-agent/src/hardware/: mod.rs  printer.rs  scale.rs
crates/fishr-agent/src/services/: mod.rs  pricing.rs  reporting.rs
crates/fishr-agent/src/sync/: agent.rs  mod.rs
crates/fishr-agent/tests/: api_test.rs
crates/fishr-central/: Cargo.toml  Dockerfile
crates/fishr-central/src/: lib.rs  main.rs
crates/fishr-central/src/api/: dashboard.rs  mod.rs  router.rs  sync.rs
crates/fishr-central/src/db/: mod.rs  pool.rs
crates/fishr-central/src/db/migrations/: 001_init.sql
crates/fishr-central/src/frontend/: app.rs
crates/fishr-central/src/sync/: mod.rs
crates/fishr-central/tests/: e2e_sync_test.rs
crates/fishr-core/: Cargo.toml
crates/fishr-core/src/: error.rs  lib.rs
crates/fishr-core/src/aco/: ant.rs  engine.rs  graph.rs  mod.rs  pheromone.rs
crates/fishr-core/src/fuzzy/: engine.rs  mod.rs  sets.rs  suggestions.rs
crates/fishr-core/src/genetic/: engine.rs  individual.rs  mod.rs  population.rs
crates/fishr-core/src/models/: branch.rs  container.rs  customer.rs  fish_item.rs  fish_type.rs  invoice.rs  market_price.rs  mod.rs  payment_method.rs  preparation.rs  sale.rs  sale_item.rs  supplier.rs  supplier_delivery.rs  sync_meta.rs
crates/fishr-core/src/sync/: protocol.rs
hardware/scales/: protocols.md
scripts/: install-pc.sh  install-rpi.sh
