[package]
name = "fishr-agent"
version.workspace = true
edition.workspace = true

[dependencies]
fishr-core = { path = "../fishr-core" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
ulid.workspace = true
rust_decimal.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
rayon.workspace = true
reqwest.workspace = true
thiserror.workspace = true
anyhow.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "rust_decimal"] }
argon2 = "0.5"
rand.workspace = true
sha2 = "0.10"
leptos = { version = "0.7", features = ["ssr"], optional = true }
leptos_axum = { version = "0.7", optional = true }
leptos_meta = { version = "0.7", optional = true }
leptos_router = { version = "0.7", optional = true }
serialport = { version = "4.3", optional = true }
tokio-cron-scheduler = "0.11"
once_cell = "1.20"
console_error_panic_hook = "0.1"
cfg-if = "1"
dotenvy = "0.15"
gloo-net = "0.6"
zeroize = { version = "1", features = ["zeroize_derive"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[features]
default = ["hardware"]
hardware = ["serialport"]
frontend = ["leptos", "leptos_axum", "leptos_meta", "leptos_router"]
