[package]
name = "fishr-central"
version.workspace = true
edition.workspace = true

[dependencies]
fishr-core = { path = "../fishr-core" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
ulid.workspace = true
rust_decimal.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
rayon.workspace = true
reqwest.workspace = true
thiserror.workspace = true
anyhow.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "rust_decimal", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
leptos = { version = "0.7", features = ["ssr"] }
leptos_axum = "0.7"
leptos_meta = "0.7"
leptos_router = "0.7"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
